feat: add new change_room api